--- a/L01P02_2022CG650/appsettings.json
+++ b/L01P02_2022CG650/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "NotasDbConnection": "Data Source =JORGECASTRO\\SQLEXPRESS; Initial Catalog = db_notas; User id = sa; Password = gregoriowuwa503; Connect Timeout = 120; Encrypt=False "
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +10,4 @@
   },
   "AllowedHosts": "*"
 }
+
